<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical"
    tools:context=".pokedetail.PokemonDetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivPokemonFront"
            android:layout_width="0dp"
            android:layout_height="250dp"
            android:adjustViewBounds="true"
            app:layout_constraintEnd_toStartOf="@id/ivPokemonBack"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_dummy_poke" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivPokemonBack"
            android:layout_width="0dp"
            android:layout_height="250dp"
            android:adjustViewBounds="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/ivPokemonFront"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_dummy_poke" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gdV75"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".75" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gdV87"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".87" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gdH33"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".33" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:fontFamily="@font/montserrat_bold"
            android:gravity="center_vertical"
            android:maxLines="2"
            android:text="Pikachu"
            android:textColor="@color/black"
            android:textSize="30sp"
            app:autoSizeMaxTextSize="24sp"
            app:autoSizeMinTextSize="16sp"
            app:autoSizeStepGranularity="1sp"
            app:autoSizeTextType="uniform"
            app:layout_constraintTop_toBottomOf="@id/ivPokemonFront"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/gdV75"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvHeight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:fontFamily="@font/montserrat_regular"
            android:gravity="center_vertical"
            android:text="65"
            android:textColor="@color/black_overlay"
            app:autoSizeMaxTextSize="14sp"
            app:autoSizeMinTextSize="10sp"
            app:autoSizeStepGranularity="1sp"
            app:autoSizeTextType="uniform"
            app:layout_constraintTop_toBottomOf="@id/tvName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/gdV75"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvWeight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:fontFamily="@font/montserrat_regular"
            android:gravity="center_vertical"
            android:text="12"
            android:textColor="@color/black_overlay"
            app:autoSizeMaxTextSize="12sp"
            app:autoSizeMinTextSize="10sp"
            app:autoSizeStepGranularity="1sp"
            app:autoSizeTextType="uniform"
            app:layout_constraintTop_toBottomOf="@id/tvHeight"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/gdV75" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:fontFamily="@font/montserrat_regular"
            android:gravity="center_vertical"
            android:textSize="14sp"
            android:text="Es muy comelon"
            android:textColor="@color/black_overlay"
            app:autoSizeMaxTextSize="15sp"
            app:autoSizeMinTextSize="12sp"
            app:autoSizeStepGranularity="1sp"
            app:autoSizeTextType="uniform"
            app:layout_constraintTop_toBottomOf="@id/tvWeight"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTitleTypes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:fontFamily="@font/montserrat_bold"
            android:gravity="center_vertical"
            android:textSize="18sp"
            android:text="@string/tipos"
            android:textColor="@color/black"
            app:autoSizeMaxTextSize="15sp"
            app:autoSizeMinTextSize="12sp"
            app:autoSizeStepGranularity="1sp"
            app:autoSizeTextType="uniform"
            app:layout_constraintTop_toBottomOf="@id/ivPokemonBack"
            app:layout_constraintStart_toEndOf="@id/gdV75"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvTypes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tvTitleTypes"
            app:layout_constraintStart_toEndOf="@id/gdV75"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTitleStats"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:fontFamily="@font/montserrat_bold"
            android:gravity="center_vertical"
            android:textSize="18sp"
            android:text="@string/stats"
            android:textColor="@color/black"
            app:autoSizeMaxTextSize="15sp"
            app:autoSizeMinTextSize="12sp"
            app:autoSizeStepGranularity="1sp"
            app:autoSizeTextType="uniform"
            app:layout_constraintTop_toBottomOf="@id/tvDescription"
            app:layout_constraintEnd_toStartOf="@id/gdV75"
            app:layout_constraintStart_toStartOf="parent" />

        <com.pedrogomez.pokeapp.pokedetail.views.TitledStatusField
            android:id="@+id/tsfHp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tvTitleStats"
            app:layout_constraintEnd_toStartOf="@id/gdV75"
            app:layout_constraintStart_toStartOf="parent"
            app:tsfTitle="@string/stat_hp"/>

        <com.pedrogomez.pokeapp.pokedetail.views.TitledStatusField
            android:id="@+id/tsfAtk"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tsfHp"
            app:layout_constraintEnd_toStartOf="@id/gdV75"
            app:layout_constraintStart_toStartOf="parent"
            app:tsfTitle="@string/stat_atk"/>

        <com.pedrogomez.pokeapp.pokedetail.views.TitledStatusField
            android:id="@+id/tsfDef"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tsfAtk"
            app:layout_constraintEnd_toStartOf="@id/gdV75"
            app:layout_constraintStart_toStartOf="parent"
            app:tsfTitle="@string/stat_def"/>

        <com.pedrogomez.pokeapp.pokedetail.views.TitledStatusField
            android:id="@+id/tsfSpd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tsfDef"
            app:layout_constraintEnd_toStartOf="@id/gdV75"
            app:layout_constraintStart_toStartOf="parent"
            app:tsfTitle="@string/stat_spd"/>

        <com.pedrogomez.pokeapp.pokedetail.views.TitledStatusField
            android:id="@+id/tsfSpAtk"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tsfSpd"
            app:layout_constraintEnd_toStartOf="@id/gdV75"
            app:layout_constraintStart_toStartOf="parent"
            app:tsfTitle="@string/stat_sp_atk"/>

        <com.pedrogomez.pokeapp.pokedetail.views.TitledStatusField
            android:id="@+id/tsfSpDef"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tsfSpAtk"
            app:layout_constraintEnd_toStartOf="@id/gdV75"
            app:layout_constraintStart_toStartOf="parent"
            app:tsfTitle="@string/stat_sp_def"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btnBack"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_margin="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_arrow_left"
            app:tint="@color/black_overlay"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvId"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:fontFamily="@font/montserrat_bold"
            android:gravity="center_vertical"
            android:maxLines="2"
            android:text="1"
            android:textColor="@color/black_overlay"
            android:textSize="28sp"
            app:autoSizeMaxTextSize="24sp"
            app:autoSizeMinTextSize="16sp"
            app:autoSizeStepGranularity="1sp"
            app:autoSizeTextType="uniform"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>

